// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldValueToggleFilter render - active 1`] = `
<OuiFilterButton
  aria-pressed={true}
  hasActiveFilters={true}
  onClick={[Function]}
>
  Kibana
</OuiFilterButton>
`;

exports[`FieldValueToggleFilter render - active negated - custom negated name 1`] = `
<OuiFilterButton
  aria-pressed={true}
  hasActiveFilters={true}
  onClick={[Function]}
>
  Others
</OuiFilterButton>
`;

exports[`FieldValueToggleFilter render - active negated 1`] = `
<OuiFilterButton
  aria-pressed={true}
  hasActiveFilters={true}
  onClick={[Function]}
>
  Not Kibana
</OuiFilterButton>
`;

exports[`FieldValueToggleFilter render 1`] = `
<OuiFilterButton
  aria-pressed={false}
  hasActiveFilters={false}
  onClick={[Function]}
>
  Kibana
</OuiFilterButton>
`;
